<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.GnomeProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <ImageButton
            android:id="@+id/backBt"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:scaleType="centerCrop"
            android:tint="@color/colorAccent"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/profilePicIv"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/il_no_gnomes_founded"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/nameTv"
            android:fontFamily="@font/caladea_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/gnome_name"
            android:textSize="26sp"
            app:layout_constraintTop_toBottomOf="@+id/profilePicIv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/personalDataCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/full_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/caladea_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/age"/>

                <TextView
                    android:id="@+id/ageTv"
                    android:fontFamily="@font/caladea_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    tools:text="306"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:fontFamily="@font/caladea_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginStart="30dp"
                        android:textSize="16sp"
                        android:text="@string/weight"/>

                    <TextView
                        android:id="@+id/weightTv"
                        android:fontFamily="@font/caladea_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="20dp"
                        android:textSize="16sp"
                        tools:text="39.06"/>

                    <TextView
                        android:fontFamily="@font/caladea_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp"
                        android:textSize="16sp"
                        android:text="@string/height"/>

                    <TextView
                        android:id="@+id/heightTv"
                        android:fontFamily="@font/caladea_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp"
                        android:layout_marginTop="20dp"
                        android:textSize="16sp"
                        tools:text="107.75"/>

                </RelativeLayout>

                <TextView
                    android:fontFamily="@font/caladea_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/hair_color"/>

                <TextView
                    android:id="@+id/hairColorTv"
                    android:fontFamily="@font/caladea_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:textColor="@color/pink_hair"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="8dp"
                    tools:text="Pink"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/professionsTv"
            android:fontFamily="@font/caladea_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/professions"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/personalDataCv"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/professionsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@+id/professionsTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/friendsTv"
            android:fontFamily="@font/caladea_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/friends"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/professionsRv"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friendsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@+id/friendsTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>